<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Property Finder</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_sort_alpha">Alphabetically</string>
    <string name="action_bar_sort_price_asc">By price (low to high)</string>
    <string name="action_bar_sort_price_desc">By price (high to low)</string>
    <string name="action_bar_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_bar_legal">Legal Notices</string>
    <string name="action_bar_map">Map</string>

</resources>